--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
 				      <username>iTaghoury2</username>
 				      <password>vq36U!Yx4ud$mfZ</password>
 				      <applicationName>jenkins-test2</applicationName>
+				      <environment>Main</environment>
 				      <region>us-east-2</region>
 				      <workers>1</workers>
 				      <workerType>MICRO</workerType>
