--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
 				      <uri>https://anypoint.mulesoft.com</uri>
 				      <muleVersion>4.4.0</muleVersion>
 				      <username>iTaghoury2</username>
-				      <password>vq36U!Yx4ud$mfZ</password>
+				      <password>Y@Rnr@gbnmhus3Z</password>
 				      <applicationName>jenkins-test2</applicationName>
 				      <environment>Main</environment>
 				      <region>us-east-2</region>
